#	$Id$	

Changelog since HylaFAX 4.2.4

* Include crypt.h where necessary (BUG 722) (9 Jan 2005)
* Fix shell comments in nofity AWK script (BUG 719) (9 Jan 2006)

Changelog for HylaFAX 4.2.4

* CVE-2005-3539: Fix for faxrcvd/notify script vulnerabilites
  (4 Jan 2004)
* don't lock-down pagingProtocol by default (15 Dec 2005)
* CVE-2005-3538: fix possible hfaxd login vulnerability due
  to PAM library absence during build (15 Dec 2005)
* fix a Solaris compile error due to PAM_CONV_AGAIN (15 Dec 2005)
* fix Solaris 9 compile error due to PAM (15 Dec 2005)
* all Mainpine boards no longer identified as the DUO+
  2-port model (5 Dec 2005)
* update hfaxd 'site adduser' functionality (29 Nov 2005)
* prevent some faxgetty hangs in Phase C EOL sync (29 Nov 2005)
* fix for clients specifying TZONE LOCAL/GMT and using %Y for
  JobFmt and RcvFmt (22 Nov 2005)

Changelog for HylaFAX 4.2.3

* fix clients to accept 1yz preliminary reponse on connection
  according to RFC959 (8 Nov 2005)
* fix trap usage and exit status for some scripts (31 Oct 2005)
* fix cover page deletion problem (27 Oct 2005)
* don't increment internal page count when an unexpected signal
  is received in place of PPS (21 Oct 2005)
* replace Class1TCFResponseDelay with Class1SwitchingCmd (20 Oct 2005)
* disable client programs from looking for UNIX socket
  when the CONFIG_UNIXTRANSPORT is not enabled (20 Oct 2005)
* improve security technique when creating temporary files (20 Oct 2005)
* fix CallID problems by initializing answer lengths (29 Sep 2005)
* fix sendfax to allow "#" in the to-name (27 Sep 2005)
* clean up page sizes and signalling (27 Sep 2005)
* improve logging when a document is rejected (27 Sep 2005)
* delay blocked jobs on failure (27 Sep 2005)
* batch sleeping jobs too (27 Sep 2005)
* fix and improve copy quality correction (27 Sep 2005)
* fix PAM support for non-passworded authentication (27 Sep 2005)
* add comments for enscript typerules entry (27 Sep 2005)