@@ -3,6 +3,7 @@
 Changelog since HylaFAX 4.2.4
 
 * Include crypt.h where necessary (BUG 722) (9 Jan 2005)
+* Fix eval sed in faxrcvd script (BUG 719) (9 Jan 2006)
 * Fix shell comments in nofity AWK script (BUG 719) (9 Jan 2006)
 
 Changelog for HylaFAX 4.2.4
